# fastapi-crud-sort-pagination

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: person.py
backend/app/model/: person.py
backend/app/repository/: person.py
backend/migrations/: env.py
backend/migrations/versions/: 9be12c295af7_init_table.py
