[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["seharshaikh-bp <seharshaikh@bitspro.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
sqlmodel = "^0.0.8"
pydantic = "^1.8.2"
sqlalchemy = ">=1.4.17,<=1.4.41"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"